fixed small bug with tabs - clicking on an already opened tab left the project page still visible at the bottom.

--- a/Robo-IDE/roboide/static/css/editmode.css
+++ b/Robo-IDE/roboide/static/css/editmode.css
@@ -45,5 +45,4 @@
 	padding:0px;
 	border:0px;
 	height: 30em;
-	text-align: center;
 }
